--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-01.Hardware/History/
-01.Hardware/__Previews/
-01.Hardware/"Project Logs for IoT_Hardware"
+01.Hardware/*/History/
+01.Hardware/*/__Previews/
+01.Hardware/*/"Project Logs for CommsBoard"/
